# access-py-telemetry

./: .gitattributes  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  CONTRIBUTING.rst  LICENSE  Makefile  README.md  _mypy.ini  config_diff.git  docs-plan.md  mypy.ini  pyproject.toml  requirements_dev.txt  tox.ini
.conda/: meta.yaml
.github/workflows/: cd.yml  ci.yml
ci/: environment-3.10.yml  environment-3.11.yml  environment-3.12.yml  environment-3.13.yml
docs/: Makefile  changelog.md  conf.py  contributing.md  index.md  index.rst  installation.md  installation.rst  make.bat  usage.rst
docs/developers/: api.md  configuration.md  decorators.md  index.md  integration.md
docs/end-users/: cli.md  index.md
src/access_ipy_telemetry/: __init__.py  access_ipy_telemetry.py  api.py  cli.py  config.yaml  decorators.py  registries.py  registry.py  utils.py
src/access_py_telemetry/: __init__.py  _version.py  api.py  ast.py  cli.py  config.yaml  decorators.py  docs-plan.md  registry.py  utils.py
src/intake_telemetry/: __init__.py  cli.py  intake_telemetry.py
templates/: telemetry_template.py
tests/: __init__.py  conftest.py  test_access_ipy_telemetry.py  test_api.py  test_ast.py  test_cli.py  test_decorators.py  test_intake_telemetry.py  test_registry.py  test_utils.py
