[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "intake_telemetry"
version = "0.1.0"
description = "Contains ipython extensions to automatically add telemetry to catalog usage"
readme = "README.md"
authors = [
  {name = "Charles Turner", email = "charles.turner@anu.edu.au"}
]
maintainers = [
  {name = "Charles Turner", email = "charles.turner@anu.edu.au"}
]
classifiers = [

]
license = {text = "Apache Software License 2.0"}
dependencies = [
  
]

[project.optional-dependencies]
dev = [
    "coverage",  # testing
    "mypy",  # linting
    "pytest",  # testing
    "ruff"  # linting
]

[project.urls]

bugs = "https://github.com/charles-turner-1/intake_telemetry/issues"
changelog = "https://github.com/charles-turner-1/intake_telemetry/blob/master/changelog.md"
homepage = "https://github.com/charles-turner-1/intake_telemetry"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.package-data]
"*" = ["*.*"]




# Mypy
# ----

[tool.mypy]
files = "."

# Use strict defaults
strict = true
warn_unreachable = true
warn_no_return = true

[[tool.mypy.overrides]]
# Don't require test functions to include types
module = "tests.*"
allow_untyped_defs = true
disable_error_code = "attr-defined"

