[build-system]
build-backend = "setuptools.build_meta"
requires = [
  "setuptools >= 61.0.0",
  "versioneer[toml]",
]

[project]
name = "access_py_telemetry"
description = "Contains ipython extensions to automatically add telemetry to registered function calls from Ipython kernels"
readme = "README.md"
requires-python = ">=3.10"
authors = [
  { name = "ACCESS-NRI" },
]
maintainers = [
  { name = "ACCESS-NRI" },
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
]
license = {text = "Apache Software License 2.0"}
dependencies = [
   "ipython>=7.0.0",
   "pydantic>=2.0.0",
   "pyyaml>=6.0.0",
   "httpx>=0.28.0",
]

dynamic = ["version"]

[project.optional-dependencies]
dev = [
    "coverage",  # testing
    "mypy",  # linting
    "pytest",  # testing
    "ruff",  # linting
]

[project.scripts]
access-py-telemetry = "access_py_telemetry.cli:configure_telemetry"

[project.urls]

bugs = "https://github.com/ACCESS-NRI/access-py-telemetry/issues"
changelog = "https://github.com/ACCESS-NRI/access-py-telemetry/blob/main/CHANGELOG.md"
homepage = "https://github.com/ACCESS-NRI/access-py-telemetry"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.package-data]
"*" = ["*.*"]


# Mypy
# ----

[tool.mypy]
files = "."
exclude = [
  "tests",
  "docs",
  "templates",
  "src/access_py_telemetry/_version.py",
]

# Use strict defaults
strict = true
warn_unreachable = true
warn_no_return = true

[tool.versioneer]
VCS = "git"
style = "pep440"
versionfile_source = "src/access_py_telemetry/_version.py"
versionfile_build = "access_py_telemetry/_version.py"
tag_prefix = "v"
parentdir_prefix = "access-py-telemetry"

[tool.coverage.run]
omit = [
    "*/_version.py",
    "*/data/__init__.py",
]